--- a/notes.html
+++ b/notes.html
@@ -58,11 +58,12 @@ The epgo command line utility provides a way to generate that list by leveraging
 
 <p>Two examples of &ldquo;search&rdquo; using <em>curl</em> for titles starting with &ldquo;flood characteristic of alluvial&rdquo;</p>
 
-<pre><code class="language-path">    # Basic search URL from using form
-    curl &quot;$EPRINTS_URL/cgi/search/simple?screen=Search&amp;order=&amp;q_merge=ALL&amp;q=flood+characteristics+of+alluvial&amp;_action_search=Search&quot; | \
-        jq 
+<pre><code class="language-shell">    # Basic search URL from using form
+    curl &quot;$EPRINTS_URL/cgi/search/simple?screen=Search&amp;order=&amp;q_merge=ALL&amp;q=flood+characteristics+of+alluvial&amp;_action_search=Search&quot;\
+    | jq 
     # Advanced Search returned as JSON (title = ??)
-    curl $&quot;EPRINTS_URL/cgi/search/archive/advanced/export_caltechauthors_JSON.js?screen=Search&amp;dataset=archive&amp;_action_export=1&amp;output=JSON&amp;exp=0%7C1%7C-date%2Fcreators_name%2Ftitle%7Carchive%7C-%7Ctitle%3Atitle%3AALL%3AIN%3Aflood+characteristics+of+alluvial%7C-%7Ceprint_status%3Aeprint_status%3AANY%3AEQ%3Aarchive%7Cmetadata_visibility%3Ametadata_visibility%3AANY%3AEQ%3Ashow&amp;n=&quot; | jq '{title: .[].title, uri: .[].uri}'
+    curl &quot;$EPRINTS_URL/cgi/search/archive/advanced/export_caltechauthors_JSON.js?screen=Search&amp;dataset=archive&amp;_action_export=1&amp;output=JSON&amp;exp=0%7C1%7C-date%2Fcreators_name%2Ftitle%7Carchive%7C-%7Ctitle%3Atitle%3AALL%3AIN%3Aflood+characteristics+of+alluvial%7C-%7Ceprint_status%3Aeprint_status%3AANY%3AEQ%3Aarchive%7Cmetadata_visibility%3Ametadata_visibility%3AANY%3AEQ%3Ashow&amp;n=&quot;\
+    | jq '{title: .[].title, uri: .[].uri}'
 </code></pre>
 
 <h2>environment vars</h2>
