--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -48,6 +48,11 @@ the tree structure used to organize the feeds.</p>
 <li>articles.*, a list of articles (a subset of publications)</li>
 </ul>
 
+<h2>Search</h2>
+
+<p>You can also use a the repository&rsquo;s search to look for interesting records. Right now the search only returns
+HTML pages. This may change in the future.  To use <a href="/search/">search</a> go to /search/ and enter your search terms.</p>
+
 <h2>Example</h2>
 
 <p>Finding an RSS feed of recent articles for someone with an ORCID of 0000-0002-1576-1676 would look like</p>
