--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -29,11 +29,13 @@ the tree structure used to organize the feeds.</p>
 <li>/person/ORCID_OR_ISNI/recent - content sorted by descending publication date, limited to 25 items</li>
 </ul>
 
-<p>Additionally you can use a search pages at</p>
+<p>Additionally you can use a search the feed contents at</p>
 
 <ul>
 <li><a href="/search/">/search/</a></li>
 </ul>
+
+<p>At this time search only provides an HTML view. This will likely change in the future.</p>
 
 <h2>The leafs</h2>
 
@@ -53,11 +55,6 @@ the tree structure used to organize the feeds.</p>
 <li>publications, a list of publications (e.g. articles, presentations, book chapters)</li>
 <li>articles.*, a list of articles (a subset of publications)</li>
 </ul>
-
-<h2>Search</h2>
-
-<p>You can also use a the repository&rsquo;s search to look for interesting records. Right now the search only returns
-HTML pages. This may change in the future.  To use <a href="/search/">search</a> go to /search/ and enter your search terms.</p>
 
 <h2>Example</h2>
 
