--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -25,13 +25,13 @@ the tree structure used to organize the feeds.</p>
 
 <ul>
 <li><a href="/recent/">/recent/</a> - content sorted by descending publication date, limited to 25 items</li>
-<li><a href="/persons/">/persons/</a> will git you a directory listing of ORCID/ISNI available
+<li><a href="/person/">/person/</a> will git you a directory listing of ORCID/ISNI available
 
 <ul>
 <li>/persons/ORCID_OR_ISNI - content of a person (author) in repository</li>
 <li>/person/ORCID_OR_ISNI/recent - content sorted by descending publication date, limited to 25 items</li>
 </ul></li>
-<li><a href="/affilations/">/affilations/</a> - lists affilations taken from the &ldquo;local groups&rdquo; field in EPrints</li>
+<li><a href="/affilation/">/affilation/</a> - lists affilations taken from the &ldquo;local groups&rdquo; field in EPrints</li>
 <li><a href="/search/">/search/</a> - Additionally you can use an interactive search (does not currently support output other than HTML pages)</li>
 </ul>
 
