--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -31,7 +31,7 @@ the tree structure used to organize the feeds.</p>
 <li>/persons/ORCID_OR_ISNI - content of a person (author) in repository</li>
 <li>/person/ORCID_OR_ISNI/recent - content sorted by descending publication date, limited to 25 items</li>
 </ul></li>
-<li><a href="/affilation/">/affilation/</a> - lists affilations taken from the &ldquo;local groups&rdquo; field in EPrints</li>
+<li><a href="/affiliation/">/affiliation/</a> - lists affiliation taken from the &ldquo;local groups&rdquo; field in EPrints</li>
 <li><a href="/search/">/search/</a> - Additionally you can use an interactive search (does not currently support output other than HTML pages)</li>
 </ul>
 
