adding JSON format support to search

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Library Feeds</title>
+    <title><no value></title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
 <header>
 <a href="http://library.caltech.edu" title="link to Caltech Library Homepage"><img src="assets/liblogo.gif" alt="Caltech Library logo"></a>
-
-<nav class="site-nav">
-<div>Home</div>
-<div><a href="/recent/articles.html">Recent Articles</a></div> 
-<div><a href="/recent/publications.html">Recent Publications</a></div> 
-<div><a href="/person/">Person</a></div> 
-<div><a href="/affiliation/">Affiliation</a></div> 
-<div><a href="/search/">Search</a></div>
-</nav>
-
 </header>
+<nav>
+<no value>
+</nav>
 
 <section>
 <h1>EPrints Feeds</h1>
