--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ on publication dates.</p>
 
 <h2>Overview</h2>
 
-<p>USAGE: epgo [OPTIONS] [EPRINT_URI|JAVASCRIPT_FILES]</p>
+<p>USAGE: epgo [OPTIONS] [EPRINT_URI]</p>
 
 <p><em>epgo</em> wraps the REST API for E-Prints 3.3 or better. It can return a list of uri,
 a JSON view of the XML presentation as well as generates feeds and web pages.</p>
