--- a/install.html
+++ b/install.html
@@ -25,9 +25,10 @@
 
 <p><em>epgo</em> is a command line program run from a shell like Bash. You can find compiled
 version in the <a href="https://github.com/caltechlibrary/epgo/releases/latest">releases</a>
-in the Github repository in a zip file named <em>epgo-binary-release.zip</em>. Inside
-the zip file look for the directory that matches your computer and copy that someplace
-defined in your path (e.g. $HOME/bin).</p>
+in the Github repository in a zip file named <em>epgo-VERSION_NUMBER-release.zip</em>.
+where VERSION_NUMBER is a <a href="http://semver.org/">symantic version number</a> (e.g. v0.1.2).
+Inside the zip file look for the directory that matches your computer and copy that
+someplace defined in your path (e.g. $HOME/bin).</p>
 
 <p>Compiled versions are available for Mac OS X (amd64 processor), Linux (amd64), Windows
 (amd64) and Rapsberry Pi (both ARM6 and ARM7)</p>
@@ -36,8 +37,8 @@ defined in your path (e.g. $HOME/bin).</p>
 
 <ol>
 <li>Go to <a href="https://github.com/caltechlibrary/epgo/releases/latest">github.com/caltechlibrary/epgo/releases/latest</a></li>
-<li>Click on the green &ldquo;epgo-binary-release.zip&rdquo; link and download</li>
-<li>Open a finder window and find the downloaded file and unzip it (e.g. epgo-binary-release.zip)</li>
+<li>Click on the green &ldquo;epgo-VERSION_NUMBER-release.zip&rdquo; link and download</li>
+<li>Open a finder window and find the downloaded file and unzip it (e.g. epgo-VERSION_NUMBER-release.zip)</li>
 <li>Look in the unziped folder and find dist/macosx-amd64/epgo</li>
 <li>Drag (or copy) the <em>epgo</em> to a &ldquo;bin&rdquo; directory in your path</li>
 <li>Open and &ldquo;Terminal&rdquo; and run <code>epgo -h</code></li>
@@ -47,8 +48,8 @@ defined in your path (e.g. $HOME/bin).</p>
 
 <ol>
 <li>Go to <a href="https://github.com/caltechlibrary/epgo/releases/latest">github.com/caltechlibrary/epgo/releases/latest</a></li>
-<li>Click on the green &ldquo;epgo-binary-release.zip&rdquo; link and download</li>
-<li>Open the file manager find the downloaded file and unzip it (e.g. epgo-binary-release.zip)</li>
+<li>Click on the green &ldquo;epgo-VERSION_NUMBER-release.zip&rdquo; link and download</li>
+<li>Open the file manager find the downloaded file and unzip it (e.g. epgo-VERSION_NUMBER-release.zip)</li>
 <li>Look in the unziped folder and find dist/windows-amd64/epgo.exe</li>
 <li>Drag (or copy) the <em>epgo.exe</em> to a &ldquo;bin&rdquo; directory in your path</li>
 <li>Open Bash and and run <code>epgo -h</code></li>
@@ -58,23 +59,23 @@ defined in your path (e.g. $HOME/bin).</p>
 
 <ol>
 <li>Go to <a href="https://github.com/caltechlibrary/epgo/releases/latest">github.com/caltechlibrary/epgo/releases/latest</a></li>
-<li>Click on the green &ldquo;epgo-binary-release.zip&rdquo; link and download</li>
-<li>find the downloaded zip file and unzip it (e.g. unzip ~/Downloads/epgo-binary-release.zip)</li>
+<li>Click on the green &ldquo;epgo-VERSION_NUMBER-release.zip&rdquo; link and download</li>
+<li>find the downloaded zip file and unzip it (e.g. unzip ~/Downloads/epgo-VERSION_NUMBER-release.zip)</li>
 <li>In the unziped directory and find for dist/linux-amd64/epgo</li>
-<li>copy the <em>epgo</em> to a &ldquo;bin&rdquo; directory (e.g. cp ~/Downloads/epgo-binary-release/dist/linux-amd64/epgo ~/bin/)</li>
+<li>copy the <em>epgo</em> to a &ldquo;bin&rdquo; directory (e.g. cp ~/Downloads/epgo-VERSION_NUMBER-release/dist/linux-amd64/epgo ~/bin/)</li>
 <li>From the shell prompt run <code>epgo -h</code></li>
 </ol>
 
 <h2>Raspberry Pi</h2>
 
-<p>If you are using a Raspberry Pi 2 or later use the ARM7 binary, ARM6 is only for the first generaiton Raspberry Pi.</p>
+<p>If you are using a Raspberry Pi 2 or later use the ARM7 VERSION_NUMBER, ARM6 is only for the first generaiton Raspberry Pi.</p>
 
 <ol>
 <li>Go to <a href="https://github.com/caltechlibrary/epgo/releases/latest">github.com/caltechlibrary/epgo/releases/latest</a></li>
-<li>Click on the green &ldquo;epgo-binary-release.zip&rdquo; link and download</li>
-<li>find the downloaded zip file and unzip it (e.g. unzip ~/Downloads/epgo-binary-release.zip)</li>
+<li>Click on the green &ldquo;epgo-VERSION_NUMBER-release.zip&rdquo; link and download</li>
+<li>find the downloaded zip file and unzip it (e.g. unzip ~/Downloads/epgo-VERSION_NUMBER-release.zip)</li>
 <li>In the unziped directory and find for dist/raspberrypi-arm7/epgo</li>
-<li>copy the <em>epgo</em> to a &ldquo;bin&rdquo; directory (e.g. cp ~/Downloads/epgo-binary-release/dist/raspberrypi-arm7/epgo ~/bin/)
+<li>copy the <em>epgo</em> to a &ldquo;bin&rdquo; directory (e.g. cp ~/Downloads/epgo-VERSION_NUMBER-release/dist/raspberrypi-arm7/epgo ~/bin/)
 
 <ul>
 <li>if you are using an original Raspberry Pi you should copy the ARM6 version instead</li>
