--- a/index.html
+++ b/index.html
@@ -25,25 +25,27 @@
 <section>
 <h1>epgo</h1>
 
-<p>This project contains the <em>epgo</em> go package for working with EPrints REST API. It also includes
-a set of command line utilities for harvesting content,  building feeds and website pages
-that run indepenantly of EPrints itself (e.g. You could have a website/feeds generated from
-an EPrints repository running on a different system).</p>
+<p>This project contains the <em>epgo</em> go package for working with EPrints
+REST API. It also includes a set of command line utilities for
+harvesting content,  building feeds and website pages that run
+indepenantly of EPrints itself (e.g. You could have a website/feeds
+generated from an EPrints repository running on a different system).</p>
 
 <h2>The command line utilities</h2>
 
 <ul>
-<li><em>epgo</em> is a command line utility utilizing EPrints&rsquo; REST API to produce alternative
-feeds and formats. Currently it supports generating a feed of repository items based
-on publication dates.</li>
-<li><em>epgo-genpages</em> is a command line utility that builds JSON documents based on the content harvested with <em>epgo</em>.
+<li><em>epgo</em> is a command line utility utilizing EPrints&rsquo; REST API to
+produce alternative feeds and formats. Currently it supports
+generating a feed of repository items based on publication dates.</li>
+<li><em>epgo-genpages</em> is a command line utility that builds JSON documents
+based on the content harvested with <em>epgo</em>.
 
 <ul>
-<li>For HTML, HTML include, RSS 2 documents <em>mkpage</em> can be used render JSON render Markdown and HTML</li>
+<li>For HTML, HTML include, RSS 2 documents <a href="https://caltechlibrary.github.io/mkpage">mkpage</a></li>
 </ul></li>
 </ul>
 
-<p>All the utilities can be configured from the environment.  The environment
+<p>The utilities can be configured from the environment.  The environment
 can be overridden by command line options. For details run the individual command wiht the &lsquo;-help&rsquo;
 option.  E.g. <code>./bin/epgo -help</code></p>
 
