--- a/install.html
+++ b/install.html
@@ -25,15 +25,17 @@
 <section>
 <h1>Installation</h1>
 
-<p><em>epgo</em> is a command line program run from a shell like Bash. You can find compiled
-version in the <a href="https://github.com/caltechlibrary/epgo/releases/latest">releases</a>
-in the Github repository in a zip file named <em>epgo-VERSION_NUMBER-release.zip</em>.
-where VERSION_NUMBER is a <a href="http://semver.org/">symantic version number</a> (e.g. v0.1.2).
-Inside the zip file look for the directory that matches your computer and copy that
-someplace defined in your path (e.g. $HOME/bin).</p>
+<p><em>epgo</em> and <em>epgo-genpages</em> are command line programs run from a shell
+like Bash. You can find compiled version in the
+<a href="https://github.com/caltechlibrary/epgo/releases/latest">releases</a>
+in the Github repository in a zip file named
+<em>epgo-VERSION_NUMBER-release.zip</em>.  where VERSION_NUMBER is a
+<a href="http://semver.org/">symantic version number</a> (e.g. v0.1.2).
+Inside the zip file look for the directory that matches your computer
+and copy that someplace defined in your path (e.g. $HOME/bin).</p>
 
-<p>Compiled versions are available for Mac OS X (amd64 processor), Linux (amd64), Windows
-(amd64) and Rapsberry Pi (both ARM6 and ARM7)</p>
+<p>Compiled versions are available for Mac OS X (amd64 processor),
+Linux (amd64), Windows (amd64) and Rapsberry Pi (both ARM6 and ARM7)</p>
 
 <h2>Mac OS X</h2>
 
