--- a/license.html
+++ b/license.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-<a href="http://library.caltech.edu" title="link to Caltech Library Homepage"><img src="assets/liblogo.gif" alt="Caltech Library logo"></a>
+<a href="http://library.caltech.edu" title="link to Caltech Library Homepage"><img src="/assets/liblogo.gif" alt="Caltech Library logo"></a>
 </header>
 <nav>
 <ul>
@@ -16,6 +16,7 @@
 <li><a href="license.html">LICENSE</a></li>
 <li><a href="install.html">INSTALL</a></li>
 <li><a href="docs/ep.html">ep</a></li>
+<li><a href="docs/ep-genfeeds.html">ep-genfeeds</a></li>
 <li><a href="https://github.com/caltechlibrary/ep">Github</a></li>
 </ul>
 
