depreciated ep-genpages and select list generation in favor of dataset

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <li><a href="license.html">LICENSE</a></li>
 <li><a href="install.html">INSTALL</a></li>
 <li><a href="docs/ep.html">ep</a></li>
-<li><a href="docs/ep-genfeeds.html">ep-genfeeds</a></li>
 <li><a href="https://github.com/caltechlibrary/ep">Github</a></li>
 </ul>
 
@@ -26,9 +25,9 @@
 <h1>ep</h1>
 
 <p>This project contains the <em>ep</em> go package for working with EPrints
-REST API. It also includes <em>ep</em> a command line utility for
+REST API. It also includes <em>ep</em> command line utilities for
 harvesting content into a <a href="https://github.com/caltechlibrary/dataset">dataset</a>
-collection.</p>
+collection and rendering JSON documents for web feeds.</p>
 
 <h2>The command line</h2>
 
