commiting to master

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </nav>
 
 <section>
-<h1>ep</h1>
+<h1>eprinttools</h1>
 
 <p>This project contains the <em>ep</em> go package for working with EPrints
 REST API. It also includes <em>ep</em> command line utilities for
