commiting to master

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <li><a href="license.html">LICENSE</a></li>
 <li><a href="install.html">INSTALL</a></li>
 <li><a href="docs/ep.html">ep</a></li>
-<li><a href="https://github.com/caltechlibrary/ep">Github</a></li>
+<li><a href="https://github.com/caltechlibrary/eprinttools">Github</a></li>
 </ul>
 
 </nav>
@@ -24,8 +24,8 @@
 <section>
 <h1>eprinttools</h1>
 
-<p>This project contains the <em>ep</em> go package for working with EPrints
-REST API. It also includes <em>ep</em> command line utilities for
+<p>This project contains the <em>eprinttools</em> go package for working with EPrints
+REST API. It also includes <em>ep</em> command line utility for
 harvesting content into a <a href="https://github.com/caltechlibrary/dataset">dataset</a>
 collection and rendering JSON documents for web feeds.</p>
 
