--- a/install.html
+++ b/install.html
@@ -16,7 +16,7 @@
 <li><a href="license.html">LICENSE</a></li>
 <li><a href="install.html">INSTALL</a></li>
 <li><a href="docs/ep.html">ep</a></li>
-<li><a href="https://github.com/caltechlibrary/ep">Github</a></li>
+<li><a href="https://github.com/caltechlibrary/eprinttools">Github</a></li>
 </ul>
 
 </nav>
@@ -39,7 +39,7 @@ Windows (amd64 processor, windows-amd64) and Rapsberry Pi (arm7 processor, raspb
 <p>For all the released version go to the project page on Github and click latest release</p>
 
 <blockquote>
-<p><a href="https://github.com/caltechlibrary/ep/releases/latest">https://github.com/caltechlibrary/ep/releases/latest</a></p>
+<p><a href="https://github.com/caltechlibrary/eprinttools/releases/latest">https://github.com/caltechlibrary/eprinttools/releases/latest</a></p>
 </blockquote>
 
 <table>
@@ -183,14 +183,14 @@ downloading the zip file.</p>
 <p><em>ep</em> is &ldquo;go gettable&rdquo;.  Use the &ldquo;go get&rdquo; command to download the dependant packages
 as well as <em>ep</em>&rsquo;s source code.</p>
 
-<pre><code class="language-shell">    go get -u github.com/caltechlibrary/ep/...
+<pre><code class="language-shell">    go get -u github.com/caltechlibrary/eprinttools/...
 </code></pre>
 
 <p>Or clone the repstory and then compile</p>
 
 <pre><code class="language-shell">    cd
-    git clone https://github.com/caltechlibrary/ep src/github.com/caltechlibrary/ep
-    cd src/github.com/caltechlibrary/ep
+    git clone https://github.com/caltechlibrary/eprinttools src/github.com/caltechlibrary/eprinttools
+    cd src/github.com/caltechlibrary/eprinttools
     make
     make test
     make install
