--- a/license.html
+++ b/license.html
@@ -16,7 +16,7 @@
 <li><a href="license.html">LICENSE</a></li>
 <li><a href="install.html">INSTALL</a></li>
 <li><a href="docs/ep.html">ep</a></li>
-<li><a href="https://github.com/caltechlibrary/ep">Github</a></li>
+<li><a href="https://github.com/caltechlibrary/eprinttools">Github</a></li>
 </ul>
 
 </nav>
