settled on a name for the new _eputil_ tool, updated docs, debugging _eputil_

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ep</title>
+    <title>eprinttools</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/site.css">
 </head>
@@ -15,7 +15,7 @@
 <li><a href="./">README</a></li>
 <li><a href="license.html">LICENSE</a></li>
 <li><a href="install.html">INSTALL</a></li>
-<li><a href="docs/ep.html">ep</a></li>
+<li><a href="docs/">Documentation</a></li>
 <li><a href="https://github.com/caltechlibrary/eprinttools">Github</a></li>
 </ul>
 
@@ -24,22 +24,28 @@
 <section>
 <h1>eprinttools</h1>
 
-<p>This project contains the <em>eprinttools</em> go package for working with EPrints
-REST API. It also includes <em>ep</em> command line utility for
+<p>This project contains the <em>eprinttools</em>, a go package for working with EPrints
+REST API. It also includes <em>ep</em> and command line utility for
 harvesting content into a <a href="https://github.com/caltechlibrary/dataset">dataset</a>
 collection and rendering JSON documents for web feeds.</p>
 
 <h2>The command line</h2>
 
 <ul>
-<li><em>ep</em> is a command line utility utilizing EPrints&rsquo; REST API to
-produce alternative feeds and formats. Save the harvest content in
-<a href="https://github.com/caltechlibrary/dataset">dataset</a> collection(s).</li>
+<li><em>eputil</em> is a command line utility for interacting (e.g. harvesting) JSON and XML from EPrints&rsquo; REST API
+
+<ul>
+<li>uses minimal configuration because it does less!</li>
+<li>will supercede <em>ep</em></li>
+</ul></li>
+<li><em>ep</em> is an older version of a EPrints harvester. It features an integration with
+   <a href="https://github.com/caltechlibrary/dataset">dataset</a> and can be used to produce
+   alternative feeds and formats.</li>
 </ul>
 
-<p>The utility is from the environment and command line options.  The environment
-is overridden by command line options. For details run the individual command
-with the &lsquo;-help&rsquo; option.</p>
+<p>The <em>ep</em> utility is configured from the environment or command line options. The environment
+settings are overridden by command line options. For details running either command envoke the
+tool name with the &lsquo;-help&rsquo; option.</p>
 
 </section>
 
