--- a/license.html
+++ b/license.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ep</title>
+    <title>eprinttools</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/site.css">
 </head>
@@ -15,7 +15,7 @@
 <li><a href="./">README</a></li>
 <li><a href="license.html">LICENSE</a></li>
 <li><a href="install.html">INSTALL</a></li>
-<li><a href="docs/ep.html">ep</a></li>
+<li><a href="docs/">Documentation</a></li>
 <li><a href="https://github.com/caltechlibrary/eprinttools">Github</a></li>
 </ul>
 
