--- a/install.html
+++ b/install.html
@@ -24,8 +24,8 @@
 <section>
 <h1>Installation</h1>
 
-<p><em>ep</em> is a command line program run from a shell like Bash. It allows you to harvest EPrint repository
-content and save it in a <a href="https://github.com/caltechlibrary/dataset">dataset</a> collection.</p>
+<p><em>eputil</em> and <em>ep</em> are command line programs run from a shell like Bash. They allow you to
+harvest and work with EPrint repository content.</p>
 
 <p>This is generalized instructions for a release.  For deployment suggestions see NOTES.md</p>
 
