integrating python 3.6 module for new release

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@ REST API.</p>
 settings are overridden by command line options. For details running either command envoke the
 tool name with the &lsquo;-help&rsquo; option.</p>
 
+<h2>Python 3.6 module</h2>
+
+<p>This repository also contains a Python 3.6 module that wraps the basic Go package giving you
+the functionality of the command line tools in a Python 3.6 package.</p>
+
 </section>
 
 <footer>
