commiting to master

--- a/index.html
+++ b/index.html
@@ -37,16 +37,19 @@ REST API.</p>
 <li>will supercede <em>ep</em></li>
 </ul></li>
 <li><em>ep</em> is a EPrints harvester that integrates with <a href="https://github.com/caltechlibrary/dataset">dataset</a>.</li>
+<li><em>doi2eprintxml</em> is a command line program for turning metadata harvested from CrossRef and DataCite into an EPrint XML document based on one or more supplied DOI</li>
 </ul>
 
-<p>Both utilities can be configured from the environment or command line options. The environment
-settings are overridden by command line options. For details running either command envoke the
+<p>The first two utilities can be configured from the environment or
+command line options. The environment settings are overridden by command
+line options. For details running either command envoke the
 tool name with the &lsquo;-help&rsquo; option.</p>
 
 <h2>Python 3.6 module</h2>
 
-<p>This repository also contains a Python 3.6 module that wraps the basic Go package giving you
-the functionality of the command line tools in a Python 3.6 package.</p>
+<p>This repository also contains a Python 3.6 module that wraps the
+basic Go package giving you the functionality of the command line tools
+in a Python 3.6 package.</p>
 
 </section>
 
