prep for v0.0.17 release

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@ REST API.</p>
 <h2>The command line programs</h2>
 
 <ul>
-<li><em>eputil</em> is a command line utility for interacting (e.g. harvesting) JSON and XML from EPrints&rsquo; REST API
+<li><a href="docs/eputil.html">eputil</a> is a command line utility for interacting (e.g. harvesting) JSON and XML from EPrints&rsquo; REST API
 
 <ul>
 <li>uses minimal configuration because it does less!</li>
 <li>will supercede <em>ep</em></li>
 </ul></li>
-<li><em>ep</em> is a EPrints harvester that integrates with <a href="https://github.com/caltechlibrary/dataset">dataset</a>.</li>
-<li><em>doi2eprintxml</em> is a command line program for turning metadata harvested from CrossRef and DataCite into an EPrint XML document based on one or more supplied DOI</li>
+<li><a href="docs/ep.html">ep</a> is a EPrints harvester that integrates with <a href="https://github.com/caltechlibrary/dataset">dataset</a>.</li>
+<li><a href="docs/doi2eprintxml">doi2eprintxml</a>_ is a command line program for turning metadata harvested from CrossRef and DataCite into an EPrint XML document based on one or more supplied DOI</li>
 </ul>
 
 <p>The first two utilities can be configured from the environment or
