prep for beta test release by Bibs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ REST API.</p>
 <li>will supercede <em>ep</em></li>
 </ul></li>
 <li><a href="docs/ep.html">ep</a> is a EPrints harvester that integrates with <a href="https://github.com/caltechlibrary/dataset">dataset</a>.</li>
-<li><a href="docs/doi2eprintxml">doi2eprintxml</a>_ is a command line program for turning metadata harvested from CrossRef and DataCite into an EPrint XML document based on one or more supplied DOI</li>
+<li><a href="docs/doi2eprintxml.html">doi2eprintxml</a> is a command line program for turning metadata harvested from CrossRef and DataCite into an EPrint XML document based on one or more supplied DOI</li>
 </ul>
 
 <p>The first two utilities can be configured from the environment or
