--- a/install.html
+++ b/install.html
@@ -24,10 +24,10 @@
 <section>
 <h1>Installation</h1>
 
-<p><em>eputil</em> and <em>ep</em> are command line programs run from a shell like Bash. They allow you to
-harvest and work with EPrint repository content.</p>
+<p><em>ep</em>, <em>eputil</em>, and <em>doi2eprintxml</em> are command line programs run from
+a shell like Bash. They allow you to harvest, work with EPrint repository content, and import content from CrossRef and DataCite.</p>
 
-<p>This is generalized instructions for a release.  For deployment suggestions see NOTES.md</p>
+<p>Below are generalized instructions for installation of a release.</p>
 
 <h2>Compiled version</h2>
 
@@ -81,7 +81,7 @@ Windows (amd64 processor, windows-amd64) and Rapsberry Pi (arm7 processor, raspb
 <ul>
 <li>(e.g. if you&rsquo;re on a Windows 10 laptop/Surface with a amd64 style CPU you&rsquo;d choose the Zip file with &ldquo;windows-amd64&rdquo; in the name).</li>
 </ul></li>
-<li>Download the zip file and unzip the file.<br /></li>
+<li>Download the zip file and unzip the file.</li>
 <li>Copy the contents of the folder named &ldquo;bin&rdquo; to a folder that is in your path
 
 <ul>
