prep for release

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@ REST API.</p>
 <li>uses minimal configuration because it does less!</li>
 <li>will supercede <em>ep</em></li>
 </ul></li>
-<li><a href="docs/ep.html">ep</a> is a EPrints harvester that integrates with <a href="https://github.com/caltechlibrary/dataset">dataset</a>.</li>
+<li><a href="docs/ep.html">ep</a> is a EPrints harvester that integrates with <a href="https://github.com/caltechlibrary/dataset">dataset</a></li>
 <li><a href="docs/doi2eprintxml.html">doi2eprintxml</a> is a command line program for turning metadata harvested from CrossRef and DataCite into an EPrint XML document based on one or more supplied DOI</li>
+<li><a href="docs/eprintxml2json.html">eprintxml2json</a> is a command line program for taking EPrint XML and turning it into JSON</li>
 </ul>
 
 <p>The first two utilities can be configured from the environment or
