--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 <section>
 <h1>eprinttools</h1>
 
-<p>This project contains the <em>eprinttools</em>, a go package for working with EPrints
-REST API.</p>
+<p>eprinttools is a Go package and command line utilities for working with EPrints 3.x EPrint XML and REST API.</p>
 
 <h2>The command line programs</h2>
 
