--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 <li>uses minimal configuration because it does less!</li>
 <li>will supercede <em>ep</em></li>
 </ul></li>
+<li><a href="docs/epfmt.html">epfmt</a> is a command line utility to pretty print EPrints XML and convert to/from JSON
+
+<ul>
+<li>in the process of pretty printing it also validates the EPrints XML against the eprinttools Go package definitions</li>
+</ul></li>
 <li><a href="docs/ep.html">ep</a> is a EPrints harvester that integrates with <a href="https://github.com/caltechlibrary/dataset">dataset</a></li>
 <li><a href="docs/doi2eprintxml.html">doi2eprintxml</a> is a command line program for turning metadata harvested from CrossRef and DataCite into an EPrint XML document based on one or more supplied DOI</li>
 <li><a href="docs/eprintxml2json.html">eprintxml2json</a> is a command line program for taking EPrint XML and turning it into JSON</li>
