--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ tool name with the &lsquo;-help&rsquo; option.</p>
 <h2>Python integration via AMES</h2>
 
 <p>The eprintools command line programs have been made available to Python
-via the <a href="https://github.com/caltechlibrar/ames">AMES</a> project. This include support for both read and write to EPrints repository systems.</p>
+via the <a href="https://github.com/caltechlibrary/ames">AMES</a> project. This include support for both read and write to EPrints repository systems.</p>
 
 </section>
 
