--- a/install.html
+++ b/install.html
@@ -181,8 +181,8 @@ downloading the zip file.</p>
 
 <h2>Compiling from source</h2>
 
-<p><em>ep</em> is &ldquo;go gettable&rdquo;.  Use the &ldquo;go get&rdquo; command to download the dependant packages
-as well as <em>ep</em>&rsquo;s source code.</p>
+<p><em>eprinttools</em> is &ldquo;go gettable&rdquo;.  Use the &ldquo;go get&rdquo; command to download the dependant packages
+as well as <em>eprinttools</em>&rsquo;s source code.</p>
 
 <pre><code class="language-shell">    go get -u github.com/caltechlibrary/eprinttools/...
 </code></pre>
@@ -196,6 +196,8 @@ as well as <em>ep</em>&rsquo;s source code.</p>
     make test
     make install
 </code></pre>
+
+<p>If eprinttools depends on dataset version v0.0.64 or better.</p>
 
 </section>
 
