removed -o, -output option from doi2eprintxml

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <section>
 <h1>eprinttools</h1>
 
-<p>eprinttools is a Go package and command line utilities for working with EPrints 3.x EPrint XML and REST API.</p>
+<p>eprinttools is a Go package and set of command line utilities for working
+with EPrints 3.x EPrint XML and REST API.</p>
 
 <h2>The command line programs</h2>
 
@@ -41,7 +42,6 @@
 <ul>
 <li>in the process of pretty printing it also validates the EPrints XML against the eprinttools Go package definitions</li>
 </ul></li>
-<li><a href="docs/ep.html">ep</a> is a EPrints harvester that integrates with <a href="https://github.com/caltechlibrary/dataset">dataset</a></li>
 <li><a href="docs/doi2eprintxml.html">doi2eprintxml</a> is a command line program for turning metadata harvested from CrossRef and DataCite into an EPrint XML document based on one or more supplied DOI</li>
 <li><a href="docs/eprintxml2json.html">eprintxml2json</a> is a command line program for taking EPrint XML and turning it into JSON</li>
 </ul>
