prep for v0.2.0 release

--- a/install.html
+++ b/install.html
@@ -32,7 +32,12 @@
 <blockquote>
 <p>https://github.com/caltechlibrary/eprinttools/releases/latest</p>
 </blockquote>
-<p>| Platform | Zip Filename | |-------------|------------------------------------------| | Windows | eprinttools-VERSION_NUMBER-windows-amd64.zip | | Mac OS X | eprinttools-VERSION_NUMBER-macosx-amd64.zip | | Linux/Intel | eprinttools-VERSION_NUMBER-linux-amd64.zip | | Raspbery Pi | eprinttools-VERSION_NUMBER-raspbian-arm7.zip |</p>
+<pre><code>| Platform    | Zip Filename                                 |
+|-------------|----------------------------------------------|
+| Windows     | eprinttools-VERSION_NUMBER-windows-amd64.zip |
+| Mac OS X    | eprinttools-VERSION_NUMBER-macosx-amd64.zip  |
+| Linux/Intel | eprinttools-VERSION_NUMBER-linux-amd64.zip   |
+| Raspbery Pi | eprinttools-VERSION_NUMBER-raspbian-arm7.zip |</code></pre>
 <h2>The basic recipe</h2>
 <ul>
 <li><p>Find the Zip file listed matching the architecture you're running and download it</p>
