--- a/install.html
+++ b/install.html
@@ -11,119 +11,232 @@
 </header>
 <nav>
 <ul>
-<li><a href="/">Home</a></li>
-<li><a href="./">README</a></li>
-<li><a href="license.html">LICENSE</a></li>
-<li><a href="install.html">INSTALL</a></li>
-<li><a href="docs/">Documentation</a></li>
-<li><a href="https://github.com/caltechlibrary/eprinttools">Github</a></li>
-<li><a href="https://github.com/caltechlibrary/eprinttools/releases/latest">Releases</a></li>
+<li>
+<a href="/">Home</a>
+</li>
+<li>
+<a href="./">README</a>
+</li>
+<li>
+<a href="license.html">LICENSE</a>
+</li>
+<li>
+<a href="install.html">INSTALL</a>
+</li>
+<li>
+<a href="docs/">Documentation</a>
+</li>
+<li>
+<a href="https://github.com/caltechlibrary/eprinttools">Github</a>
+</li>
+<li>
+<a href="https://github.com/caltechlibrary/eprinttools/releases/latest">Releases</a>
+</li>
 </ul>
 </nav>
 
 <section>
-<h1>Installation</h1>
-<p><em>eputil</em>, <em>epfmt</em>, <em>eprintxml2json</em> and <em>doi2eprintxml</em> are command line programs run from a shell like Bash. They allow you to harvest, work with EPrint repository content, and import content from CrossRef and DataCite.</p>
-<p>Below are generalized instructions for installation of a release.</p>
-<h2>Compiled version</h2>
-<p>Compiled versions are available for Mac OS X (amd64 processor, macosx-amd64), Linux (amd64 process, linux-amd64), Windows (amd64 processor, windows-amd64) and Rapsberry Pi (arm7 processor, raspbian-arm7)</p>
-<p>VERSION_NUMBER is a <a href="http://semver.org/">symantic version number</a> (e.g. v0.1.2)</p>
-<p>For all the released version go to the project page on Github and click latest release</p>
+<h1>
+Installation
+</h1>
+<p>
+<em>eputil</em>, <em>epfmt</em>, <em>eprintxml2json</em> and <em>doi2eprintxml</em> are command line programs run from a shell like Bash. They allow you to harvest, work with EPrint repository content, and import content from CrossRef and DataCite.
+</p>
+<p>
+Below are generalized instructions for installation of a release.
+</p>
+<h2>
+Compiled version
+</h2>
+<p>
+Compiled versions are available for Mac OS X (amd64 processor, macosx-amd64), Linux (amd64 process, linux-amd64), Windows (amd64 processor, windows-amd64) and Rapsberry Pi (arm7 processor, raspbian-arm7)
+</p>
+<p>
+VERSION_NUMBER is a <a href="http://semver.org/">symantic version number</a> (e.g. v0.1.2)
+</p>
+<p>
+For all the released version go to the project page on Github and click latest release
+</p>
 <blockquote>
-<p>https://github.com/caltechlibrary/eprinttools/releases/latest</p>
+<p>
+<a href="https://github.com/caltechlibrary/eprinttools/releases/latest">https://github.com/caltechlibrary/eprinttools/releases/latest</a>
+</p>
 </blockquote>
 <pre><code>| Platform    | Zip Filename                                 |
 |-------------|----------------------------------------------|
 | Windows     | eprinttools-VERSION_NUMBER-windows-amd64.zip |
 | Mac OS X    | eprinttools-VERSION_NUMBER-macosx-amd64.zip  |
 | Linux/Intel | eprinttools-VERSION_NUMBER-linux-amd64.zip   |
-| Raspbery Pi | eprinttools-VERSION_NUMBER-raspbian-arm7.zip |</code></pre>
-<h2>The basic recipe</h2>
+| Raspbery Pi | eprinttools-VERSION_NUMBER-raspbian-arm7.zip |
+</code></pre>
+<h2>
+The basic recipe
+</h2>
 <ul>
-<li><p>Find the Zip file listed matching the architecture you're running and download it</p>
+<li>
+Find the Zip file listed matching the architecture you’re running and download it
 <ul>
-<li>(e.g. if you're on a Windows 10 laptop/Surface with a amd64 style CPU you'd choose the Zip file with "windows-amd64" in the name).</li>
-</ul></li>
-<li><p>Download the zip file and unzip the file.</p></li>
-<li><p>Copy the contents of the folder named "bin" to a folder that is in your path</p>
-<ul>
-<li>(e.g. "$HOME/bin" is common).</li>
-</ul></li>
-<li><p>Adjust your PATH if needed</p>
-<ul>
-<li>(e.g. <code>export PATH="$HOME/bin:$PATH"</code>)</li>
-</ul></li>
-<li><p>Test</p></li>
+<li>
+(e.g. if you’re on a Windows 10 laptop/Surface with a amd64 style CPU you’d choose the Zip file with “windows-amd64” in the name).
+</li>
 </ul>
-<h3>Mac OS X</h3>
-<ol type="1">
-<li>Download the zip file</li>
-<li>Unzip the zip file</li>
-<li>Copy the executables to $HOME/bin (or a folder in your path)</li>
-<li>Make sure the new location in in our path</li>
-<li>Test</li>
+</li>
+<li>
+Download the zip file and unzip the file.
+</li>
+<li>
+Copy the contents of the folder named “bin” to a folder that is in your path
+<ul>
+<li>
+(e.g. “$HOME/bin” is common).
+</li>
+</ul>
+</li>
+<li>
+Adjust your PATH if needed
+<ul>
+<li>
+(e.g. <code>export PATH=“$HOME/bin:$PATH”</code>)
+</li>
+</ul>
+</li>
+<li>
+Test
+</li>
+</ul>
+<h3>
+Mac OS X
+</h3>
+<ol>
+<li>
+Download the zip file
+</li>
+<li>
+Unzip the zip file
+</li>
+<li>
+Copy the executables to $HOME/bin (or a folder in your path)
+</li>
+<li>
+Make sure the new location in in our path
+</li>
+<li>
+Test
+</li>
 </ol>
-<p>Here's an example of the commands run in the Terminal App after downloading the zip file.</p>
+<p>
+Here’s an example of the commands run in the Terminal App after downloading the zip file.
+</p>
 <pre class="shell"><code>    cd Downloads/
     unzip eprinttools-*-macosx-amd64.zip
     mkdir -p $HOME/bin
     cp -v bin/* $HOME/bin/
     export PATH=$HOME/bin:$PATH
-    ep -version</code></pre>
-<h3>Windows</h3>
-<ol type="1">
-<li>Download the zip file</li>
-<li>Unzip the zip file</li>
-<li>Copy the executables to $HOME/bin (or a folder in your path)</li>
-<li>Test</li>
+    eputil -version
+</code></pre>
+<h3>
+Windows
+</h3>
+<ol>
+<li>
+Download the zip file
+</li>
+<li>
+Unzip the zip file
+</li>
+<li>
+Copy the executables to $HOME/bin (or a folder in your path)
+</li>
+<li>
+Test
+</li>
 </ol>
-<p>Here's an example of the commands run in from the Bash shell on Windows 10 after downloading the zip file.</p>
+<p>
+Here’s an example of the commands run in from the Bash shell on Windows 10 after downloading the zip file.
+</p>
 <pre class="shell"><code>    cd Downloads/
     unzip eprinttools-*-windows-amd64.zip
     mkdir -p $HOME/bin
     cp -v bin/* $HOME/bin/
     export PATH=$HOME/bin:$PATH
-    ep -version</code></pre>
-<h3>Linux</h3>
-<ol type="1">
-<li>Download the zip file</li>
-<li>Unzip the zip file</li>
-<li>Copy the executables to $HOME/bin (or a folder in your path)</li>
-<li>Test</li>
+    eputil -version
+</code></pre>
+<h3>
+Linux
+</h3>
+<ol>
+<li>
+Download the zip file
+</li>
+<li>
+Unzip the zip file
+</li>
+<li>
+Copy the executables to $HOME/bin (or a folder in your path)
+</li>
+<li>
+Test
+</li>
 </ol>
-<p>Here's an example of the commands run in from the Bash shell after downloading the zip file.</p>
+<p>
+Here’s an example of the commands run in from the Bash shell after downloading the zip file.
+</p>
 <pre class="shell"><code>    cd Downloads/
     unzip eprinttools-*-linux-amd64.zip
     mkdir -p $HOME/bin
     cp -v bin/* $HOME/bin/
     export PATH=$HOME/bin:$PATH
-    ep -version</code></pre>
-<h3>Raspberry Pi</h3>
-<p>Released version is for a Raspberry Pi 2 or later use (i.e. requires ARM 7 support).</p>
-<ol type="1">
-<li>Download the zip file</li>
-<li>Unzip the zip file</li>
-<li>Copy the executables to $HOME/bin (or a folder in your path)</li>
-<li>Test</li>
+    eputil -version
+</code></pre>
+<h3>
+Raspberry Pi
+</h3>
+<p>
+Released version is for a Raspberry Pi 2 or later use (i.e. requires ARM 7 support).
+</p>
+<ol>
+<li>
+Download the zip file
+</li>
+<li>
+Unzip the zip file
+</li>
+<li>
+Copy the executables to $HOME/bin (or a folder in your path)
+</li>
+<li>
+Test
+</li>
 </ol>
-<p>Here's an example of the commands run in from the Bash shell after downloading the zip file.</p>
+<p>
+Here’s an example of the commands run in from the Bash shell after downloading the zip file.
+</p>
 <pre class="shell"><code>    cd Downloads/
     unzip eprinttools-*-raspbian-arm7.zip
     mkdir -p $HOME/bin
     cp -v bin/* $HOME/bin/
     export PATH=$HOME/bin:$PATH
-    ep -version</code></pre>
-<h2>Compiling from source</h2>
-<p><em>eprinttools</em> is "go gettable". Use the "go get" command to download the dependant packages as well as <em>eprinttools</em>'s source code.</p>
-<pre class="shell"><code>    go get -u github.com/caltechlibrary/eprinttools/...</code></pre>
-<p>Or clone the repstory and then compile</p>
+    eputil -version
+</code></pre>
+<h2>
+Compiling from source
+</h2>
+<p>
+<em>eprinttools</em> is “go gettable”. Use the “go get” command to download the dependant packages as well as <em>eprinttools</em>’s source code.
+</p>
+<pre class="shell"><code>    go get -u github.com/caltechlibrary/eprinttools/...
+</code></pre>
+<p>
+Or clone the repstory and then compile
+</p>
 <pre class="shell"><code>    cd
-    git clone https://github.com/caltechlibrary/eprinttools src/github.com/caltechlibrary/eprinttools
+    git clone https://github.com/caltechlibrary/eprinttools \
+        src/github.com/caltechlibrary/eprinttools
     cd src/github.com/caltechlibrary/eprinttools
     make
     make test
-    make install</code></pre>
-<p>If eprinttools depends on dataset version v0.0.64 or better.</p>
+    make install
+</code></pre>
 </section>
 
 <footer>
