commiting to main

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ The command line programs
 uses minimal configuration because it does less!
 </li>
 <li>
-will supercede <em>ep</em>
+it superceded the <em>ep</em> command
 </li>
 </ul>
 </li>
@@ -80,6 +80,12 @@ Python integration via AMES
 </h2>
 <p>
 The eprintools command line programs have been made available to Python via the <a href="https://github.com/caltechlibrary/ames">AMES</a> project. This include support for both read and write to EPrints repository systems.
+</p>
+<h2>
+Demo of wrapping <em>eputil</em> in Python
+</h2>
+<p>
+There is a proof of concept wrapper for for <em>eputil</em> in Python 3 in the “eprints3x” folder. There is an example “demo-harvester.py” that shows how you can easily implement a harvester for your EPrints 3.3x content.
 </p>
 </section>
 
