commiting to main

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ The eprintools command line programs have been made available to Python via the 
 Demo of wrapping <em>eputil</em> in Python
 </h2>
 <p>
-There is a proof of concept wrapper for for <em>eputil</em> in Python 3 in the “eprints3x” folder. There is an example “demo-harvester.py” that shows how you can easily implement a harvester for your EPrints 3.3x content.
+There is a proof of concept wrapper for for <em>eputil</em> in Python 3 in the “eprints3x” folder. There is an example “demo-harvester-full.py” and “demo-harvester-recent.py” that shows how you can easily implement a harvester for your EPrints 3.3x content.
 </p>
 </section>
 
