--- a/index.html
+++ b/index.html
@@ -36,15 +36,21 @@
 </nav>
 
 <section>
-<h1>
+<h1 id="eprinttools">
 eprinttools
 </h1>
 <p>
-eprinttools is a Go package and set of command line utilities for working with EPrints 3.x EPrint XML and REST API. It is in the process of transitioning to a Python 3 based project.
+eprinttools is a collection of command line tools written in Go, a Go package and set of command line utilities for working with EPrints 3.x EPrint XML and REST API written in Python 3.8. Eventually it is planned to have this project become a pure Python project.
 </p>
-<h2>
-The command line programs
+<p>
+This project also hosts demonstration code to replicate a public facing version of an EPrints repository outside of EPrints. Think of it as the public views and landing pages.
+</p>
+<h2 id="go-base-code">
+Go base code
 </h2>
+<h3 id="the-command-line-programs">
+The command line programs
+</h3>
 <ul>
 <li>
 <a href="docs/eputil.html">eputil</a> is a command line utility for interacting (e.g. harvesting) JSON and XML from EPrints’ REST API
@@ -75,22 +81,76 @@ in the process of pretty printing it also validates the EPrints XML against the 
 <p>
 The first two utilities can be configured from the environment or command line options. The environment settings are overridden by command line options. For details running either command envoke the tool name with the ‘-help’ option.
 </p>
-<h2>
-Python integration via AMES
+<h2 id="python-base-code">
+Python base code
 </h2>
+<h3 id="python-modules">
+Python Modules
+</h3>
+<h4 id="eprints3x">
+eprints3x
+</h4>
+<p>
+This python module wraps the <em>eputil</em> Go comand in Python. It makes it trivial to implement harvesting an EPrints repository using the EPrints REST API.
+</p>
+<h4 id="eprintviews">
+eprintviews
+</h4>
+<p>
+This python module uses py_dataset and the harvested content to generate a htdocs directory similar to the URL layout of EPrints. It features classes for working with Views, Users (needed to attribute names to userid fields EPrint XML harvested from the REST API), Subjects (a way to load the subjects text file from an EPrints archive and generate the path to label mapping used when rendering views into an htdocs directory) and Aggregator (this does the heavy lifting of processing a dataset collection of harvested EPrint XML and generating the views as JSON documents in the htdocs directory).
+</p>
+<h3 id="command-line-tools">
+command line tools
+</h3>
+<h4 id="harvester_full.py-harvester_recent.py">
+harvester_full.py, harvester_recent.py
+</h4>
+<p>
+These two Python programs use <strong>eprints3x</strong> module to implement harvesters of EPrint XML and any related digitl objects (e.g. PDFs, images) into a dataset collection
+</p>
+<h4 id="genviews.py">
+genviews.py
+</h4>
+<p>
+This Python program processes a dataset collection and renders an htdocs tree populating it with JSON documents and key lists. This skeleton of metadata and directory structure can then be processed into a rendered website mirroring the content from an EPrints repository. This module relies on <strong>eprintviews</strong>.
+</p>
+<h4 id="indexer.py">
+indexer.py
+</h4>
+<p>
+This Python program indexes the contents of our replicated EPrints site by creating <code>scheme.json</code> files along side the <code>index.json</code> files that represent the landing pages for the replicated repository. These can then be easily ingested into Lunr.js or Elasticsearch. Currently the proof of concept targets Lunr.js. This module relies on <strong>eprintviews</strong>.
+</p>
+<h4 id="mk_website.py">
+mk_website.py
+</h4>
+<p>
+This Python program creates the HTML pages from Markdown documents in the static folder (e.g. home page and major landing pages) as well as the individual views and abstracts from the JSON documents created by <strong>genviews.py</strong>. The final result is a static website ready to serve out to the public. This module relies on <strong>eprintviews</strong>.
+</p>
+<h4 id="publisher.py">
+publisher.py
+</h4>
+<p>
+This Python program copys (syncs) the content with an AWS S3 bucket via the AWS command line tools.
+</p>
+<h2 id="related-github-projects">
+Related GitHub projects
+</h2>
+<h3 id="py_dataset">
+py_dataset
+</h3>
+<p>
+This Python module provides access to dataset collections which we use as intermediate storage for JSON documents and related attachments.
+</p>
+<h3 id="ames">
+AMES
+</h3>
 <p>
 The eprintools command line programs have been made available to Python via the <a href="https://github.com/caltechlibrary/ames">AMES</a> project. This include support for both read and write to EPrints repository systems.
-</p>
-<h2>
-Demo of wrapping <em>eputil</em> in Python
-</h2>
-<p>
-There is a proof of concept wrapper for for <em>eputil</em> in Python 3 in the “eprints3x” folder. There is an example “demo-harvester-full.py” and “demo-harvester-recent.py” that shows how you can easily implement a harvester for your EPrints 3.3x content.
 </p>
 </section>
 
 <footer>
-<span>&copy; 2020 <a href="https://www.library.caltech.edu/copyright">Caltech Library</a></span>
+<span>&copy; 2021 <a href="https://www.library.caltech.edu/copyright">Caltech Library</a></span>
 <address>1200 E California Blvd, Mail Code 1-32, Pasadena, CA 91125-3200</address>
 <span><a href="mailto:library@caltech.edu">Email Us</a></span> 
 <span>Phone: <a href="tel:+1-626-395-3405">(626)395-3405</a></span>
