--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 eprinttools
 </h1>
 <p>
-eprinttools is a collection of command line tools written in Go, a Go package and set of command line utilities for working with EPrints 3.x EPrint XML and REST API written in Python 3.8. Eventually it is planned to have this project become a pure Python project.
+This is a collection of command line tools written in Go, a Go and Python 3.8 package for working with EPrints 3.3.x EPrint XML and REST API.
 </p>
 <p>
 This project also hosts demonstration code to replicate a public facing version of an EPrints repository outside of EPrints. Think of it as the public views and landing pages.
