--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ The command line programs
 <a href="docs/eputil.html">eputil</a> is a command line utility for interacting (e.g. harvesting) JSON and XML from EPrints’ REST API
 <ul>
 <li>
-uses minimal configuration (because it does less!)
+minimal configuration (because it does so much less!)
 </li>
 </ul>
 </li>
@@ -67,7 +67,7 @@ uses minimal configuration (because it does less!)
 <a href="docs/doi2eprintxml.html">doi2eprintxml</a> is a command line program for turning metadata harvested from CrossRef and DataCite into an EPrint XML document based on one or more supplied DOI
 </li>
 <li>
-<a href="docs/ep3apid.html">ep3apid</a> is a Unix style service for interacting with an EPrint repository via a localhost proxy. It includes the ability to get restricted key lists as well as retrieve a simplified JSON record representing an EPrints record
+<a href="docs/ep3apid.html">ep3apid</a> is a Unix style web service for interacting with an EPrint repository via a localhost proxy. It includes the ability to get restricted key lists as well as retrieve a simplified JSON record representing an EPrints record
 </li>
 </ul>
 <p>
@@ -88,7 +88,7 @@ In the “dsn” attribute <strong>USERNAME:SECRET</strong> are the username/pas
 Related GitHub projects
 </h2>
 <h3 id="py_dataset">
-py_dataset
+<a href="https://github.com/caltechlibrary/py_dataset">py_dataset</a>
 </h3>
 <p>
 This Python module provides access to dataset collections which we use as intermediate storage for JSON documents and related attachments.
@@ -107,5 +107,27 @@ The eprintools command line programs have been made available to Python via the 
 <span><a href="mailto:library@caltech.edu">Email Us</a></span> 
 <span>Phone: <a href="tel:+1-626-395-3405">(626)395-3405</a></span>
 </footer>
+<!-- START: PrettyFi from https://github.com/google/code-prettify -->
+<script>
+/* We want to add the class "prettyprint" to all the pre elements */
+var pre_list = document.querySelectorAll("pre");
+
+pre_list.forEach(function(elem) {
+    elem.classList.add("prettyprint");
+    elem.classList.add("linenums");/**/
+    elem.classList.add("json"); /**/
+});
+</script>
+<style>
+li.L0, li.L1, li.L2, li.L3, li.L4, li.L5, li.L6, li.L7, li.L8, li.L9
+{
+    color: #555;
+    list-style-type: decimal;
+}
+</style>
+<link rel="stylesheet" type="text/css" href="/css/prettify.css">
+<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_
+prettify.js"></script>
+<!--  END: PrettyFi from https://github.com/google/code-prettify -->
 </body>
 </html>
