--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ href="https://github.com/caltechlibrary/eprinttools/releases/latest">Releases</a
 eprinttools
 </h1>
 <p>
-This is a collection of command line tools and web service written in Go
-for working with EPrints 3.3.x EPrint XML, the EPrint REST API and
-directly with the respository database(s).
+This is a collection of command line tools and a web service written in
+Go for working with EPrints 3.3.x EPrint XML, the EPrint REST API and
+directly with the EPrints MySQL repository database(s).
 </p>
 <h2 id="go-base-code">
 Go base code
